syntax = "proto3";
package test.proto.v1;
import "google/protobuf/any.proto";
import "google/protobuf/api.proto";
import "google/protobuf/type.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/source_context.proto";
import "google/protobuf/empty.proto";
option go_package = "./;testProto";

message User {
  enum Type {
    UNKNOWN = 0;
    USER = 1;
    MANAGER = 2;
    ADMIN = 3;
  }

  string id = 1;
  string name = 2;
  bool active = 3;
  uint32 age = 4;
  Location location = 5;
}

message Location {
  string country = 1;
  string city = 2;
  Coordinates coordinates = 3;
}

message Coordinates {
  double lat = 1;
  double lng = 2;
}

message M1 {
  message NestedM1 {
    message NestedM2 {
      enum NestedEnum {
        A = 0;
        B = 1;
        C = 2;
      }

      uint64 n2_id = 1;
      string n2_name = 2;
    }

    uint64 n_id = 1;
    string n_name = 2;
    repeated NestedM2 repeatedNested_m2 = 3;
    repeated EnumM1 repeated_enum_value = 4;
    NestedM2 nested_m2 = 5;

    oneof nestedM1_oneof {
      int32 int_oneof = 6;
      NestedM2 nestedM2_oneof = 7;
    }
  }

  enum EnumM1 {
    NULL = 0;
    FIRST = 1;
    SECOND = 2;
  }

  int32 int_val32 = 1;
  repeated string repeated_string_val = 2;
  NestedM1 nested_m1 = 3;
  repeated NestedM1 repeated_nested_m1 = 4;
  map<string, NestedM1> string2NestedM1 = 5;
  map<string, User> string2User = 6;
  map<string, string> string2string = 7;
  map<int64, string> int2string = 8;
  map<string, int64> string2int = 9;
  map<string, M2> string2M2 = 10;
  map<int64, EnumM1> int2enum = 11;
  bool bool_value = 12;
  repeated bool repeated_bool_value = 13;
  EnumM1 enum_value = 14;
  repeated EnumM1 repeated_enum_value = 15;
  User.Type type = 16;
  repeated User user = 17;
  repeated User repeated_user = 18;
  map<string, M4> string2M4 = 19;

  oneof test_oneof {
    string string_oneof = 20;
    NestedM1 nestedM1_oneof = 21;
  }

  google.protobuf.Any any = 22;
  map<string, google.protobuf.Any> any_map = 23;
  repeated OneOf repeated_oneof = 24;
  int64 int_val64 = 25;
  uint64 uint_val64 = 26;
  sint64 sint_val64 = 27;
  sint32 sint_val32 = 28;
  uint32 uint_val32 = 29;
}

message OneOf {
  oneof test_oneof {
    string string_oneof = 1;
    float float_oneof = 2;
  }
}

message M2 {
  int64 m2_id = 1;
  string m2_name = 2;
  map<string, M3> m2_string2M2 = 3;
}

message M3 {
  int64 m3_id = 1;
  string m3_name = 2;
  repeated bytes buf = 3;
}

message M4 {
  int64 m4_id = 1;
  string name = 2;
  repeated bytes buf = 3;
  repeated M1.EnumM1 repeated_enum_value = 4;
  repeated bool repeated_bool = 5;
  repeated double repeated_double = 6;
}

message StreamMessage {
  oneof test_stream {
    M3 header = 1;
    M4 payload = 2;
  }
}

message Types {
  google.protobuf.Timestamp timestamp = 1;
  google.protobuf.Duration duration = 2;

  google.protobuf.DoubleValue double_value = 3;
  google.protobuf.FloatValue float_value = 4;
  google.protobuf.Int64Value int64_value = 5;
  google.protobuf.UInt64Value uint64_value = 6;
  google.protobuf.Int32Value int32_value = 7;
  google.protobuf.UInt32Value uint32_value = 8;

  google.protobuf.BoolValue bool_value = 9;
  google.protobuf.StringValue string_value = 10;
  google.protobuf.BytesValue bytes_value = 11;
  google.protobuf.Struct struct_value = 12;

  google.protobuf.Value value = 13;
  google.protobuf.ListValue list_value = 14;
}

message Loop {
  int64 id = 1;
  string name = 2;
  repeated Loop child = 3;
}

message ClientStreamResponse {
  repeated M3 header = 1;
  repeated M4 payload = 2;
}

enum Test {
  UNKNOWN = 0;
  USER = 1;
  MANAGER = 2;
  ADMIN = 3;
}

service test_proto {
  rpc Unary(M1) returns (M1);
  rpc ClientStream(stream StreamMessage) returns(ClientStreamResponse);
  rpc ServerStream(StreamMessage) returns(stream StreamMessage);
  rpc ClientServerStream(stream StreamMessage) returns(stream StreamMessage);
  rpc TypesTest(Types) returns (Types);
  rpc LoopTest(Loop) returns (Loop);
  rpc CreateUser(User) returns (User);
  rpc AuthBasic(M1) returns (M1);
  rpc AuthBearer(M1) returns (M1);
  rpc AuthJWT(M1) returns (M1);

  rpc Any(google.protobuf.Any) returns (google.protobuf.Any);
  rpc Api(google.protobuf.Api) returns (google.protobuf.Api);
  rpc BoolValue(google.protobuf.BoolValue) returns (google.protobuf.BoolValue);
  rpc BytesValue(google.protobuf.BytesValue) returns (google.protobuf.BytesValue);
  rpc DoubleValue(google.protobuf.DoubleValue) returns (google.protobuf.DoubleValue);
  rpc Duration(google.protobuf.Duration) returns (google.protobuf.Duration);
  rpc Empty(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Enum(google.protobuf.Enum) returns (google.protobuf.Enum);
  rpc EnumValue(google.protobuf.EnumValue) returns (google.protobuf.EnumValue);
  rpc Field(google.protobuf.Field) returns (google.protobuf.Field);
  rpc FieldMask(google.protobuf.FieldMask) returns (google.protobuf.FieldMask);
  rpc FloatValue(google.protobuf.FloatValue) returns (google.protobuf.FloatValue);
  rpc Int32Value(google.protobuf.Int32Value) returns (google.protobuf.Int32Value);
  rpc Int64Value(google.protobuf.Int64Value) returns (google.protobuf.Int64Value);
  rpc ListValue(google.protobuf.ListValue) returns (google.protobuf.ListValue);
  rpc Method(google.protobuf.Method) returns (google.protobuf.Method);
  rpc Mixin(google.protobuf.Mixin) returns (google.protobuf.Mixin);
  rpc Option(google.protobuf.Option) returns (google.protobuf.Option);
  rpc SourceContext(google.protobuf.SourceContext) returns (google.protobuf.SourceContext);
  rpc StringValue(google.protobuf.StringValue) returns (google.protobuf.StringValue);
  rpc Struct(google.protobuf.Struct) returns (google.protobuf.Struct);
  rpc Timestamp(google.protobuf.Timestamp) returns (google.protobuf.Timestamp);
  rpc Type(google.protobuf.Type) returns (google.protobuf.Type);
  rpc UInt32Value(google.protobuf.UInt32Value) returns (google.protobuf.UInt32Value);
  rpc UInt64Value(google.protobuf.UInt64Value) returns (google.protobuf.UInt64Value);
  rpc Value(google.protobuf.Value) returns (google.protobuf.Value);
}